# TerminalDataService

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logging_config.py  main.py  pyproject.toml  pytest.ini  test.db
.localstack/cache/: machine.json
alembic/: env.py
alembic/versions/: 3179dbab7daa_init_schema.py  38affc63ff65_create_clients_table.py  80529003138b_add_unique_constraint_to_clients_name.py  8ae2dac54043_add_device_id_to_messages.py  9d6f56704bb6_add_name_column_to_devices.py  9d8ef4bd5ed2_next_change.py  ab1ee6deab87_add_device_id_to_messages.py  fa64a9640f59_update_db.py
app/celery_service/: clients.py  config.py  init.py  run.py  task.py
app/config/: settings.py
app/controllers/: client_controller.py  device_controller.py  message_controller.py  test.py
app/enum/: status.py
app/helpers/: database.py  ensure_entities.py  message_helper.py  redis_client.py
app/models/: MessageSummary.py  Status.py  base.py  client_model.py  client_schema.py  device_model.py  device_schema.py  messageSummary.py  message_model.py  message_schema.py
app/routers/: __init__.py
app/sqs/: connector.py  lifespan.py  sqs_consumer.py
app/workers/: base_worker.py  init_workers.py  kafka_consumer_worker.py  kafka_producer_worker.py  sqs_consumer_worker.py  sqs_producer_worker.py
celery_app/: task.py
celery_service/: config.py  run.py  task.py
localstack/init/ready.d/: 10_create_resources.sh
loki/: config.yaml
promtail/: config.yaml
tests/: conftest.py  test.py  test_assign_device.py  test_client.py  test_device.py  test_messages.py  test_redis.py  test_sqs_consumer.py
