[tool.poetry]
name = "terminal-data-service"
version = "0.1.0"
description = ""
authors = ["Bety <Elisabeta.Onoriu@endava.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
psycopg2-binary = ">=2.9.10,<3.0.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
boto3 = "^1.40.13"
awscli-local = "^0.22.2"
pydantic-settings = "^2.10.1"
localstack = "^4.7.0"
aiosqlite = "^0.21.0"
awscli = "^1.42.17"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
redis = "^6.4.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"
pytest = "^8.4.1"
awscli-local = "^0.22.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
moto = {extras = ["boto3"], version = "^5.1.11"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
